Curve doesn't restore initial form after deleting all its shapekeys #50614

Closed
opened 2017-02-07 21:28:59 +01:00 by Serge Lyatin · 10 comments

System Information
Win 7 32bit

Blender Version
Broken: 2.78a

Short description of error
Removing all shapekeys leaves the curve in the state of the last edited shapekey.

Exact steps for others to reproduce the error
Shapekey.blend

0001-0110.mp4

**System Information** Win 7 32bit **Blender Version** Broken: 2.78a **Short description of error** Removing **all** shapekeys leaves the curve in the state of the last edited shapekey. **Exact steps for others to reproduce the error** [Shapekey.blend](https://archive.blender.org/developer/F453616/Shapekey.blend) [0001-0110.mp4](https://archive.blender.org/developer/F453617/0001-0110.mp4)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SergeL

Added subscriber: @SergeL
Member

Added subscriber: @TheOnlyJoey

Added subscriber: @TheOnlyJoey
Member

I tried this on Blender 2.78a and current buildbot but can not reproduce this case.
Removing the Shapekey resets the curve for me as well.

I tried this on Blender 2.78a and current buildbot but can not reproduce this case. Removing the Shapekey resets the curve for me as well.
Author

Same for me in the latest build. Also tried 2.76b and 2.77a with no positive result.

Same for me in the latest build. Also tried 2.76b and 2.77a with no positive result.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2017-02-17 12:43:30 +01:00

Sigh… Please explain clearly in text the needed steps to reproduce the issue, it’s painful to have to look at the video to understand it!

So, can confirm the issue - but you have to delete all shapekeys of the curve to see it go back to latest edited shapekey shape…

Sigh… Please explain clearly in text the needed steps to reproduce the issue, it’s painful to have to look at the video to understand it! So, can confirm the issue - but you have to delete **all** shapekeys of the curve to see it go back to latest edited shapekey shape…
Bastien Montagne changed title from Curve doesn't restore initial form after deleting keyshapes to Curve doesn't restore initial form after deleting all its shapekeys 2017-02-17 12:44:48 +01:00

This issue was referenced by 6f1493f68f

This issue was referenced by 6f1493f68fe01a8e951cf6c4e50103e20b85d513

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Note that the fix cannot do much about curves already 'corrupted' with some shapekey data, you'll basically have to activate basis key, and switch in/out of edit mode. This will reset the other shapekeys based on basis one though.

Note that the fix cannot do much about curves already 'corrupted' with some shapekey data, you'll basically have to activate basis key, and switch in/out of edit mode. This will reset the other shapekeys based on basis one though.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50614
No description provided.